--- a/style.css
+++ b/style.css
@@ -1,16 +1,25 @@
 body {
     font-family: 'Plus Jakarta Sans', sans-serif;
-    margin: 0;;
+    padding-top: 65px;
+    margin: 0;
 }
 
 .top-bar{
     margin: 0;
     display: flex;
     align-items: center;
+    background-color: white;
 
     /* Efecto de Sombra (Eje X, Eje Y, Difuminado, Color) */
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     padding-bottom: 14px;
+
+    /* --- PROPIEDADES PARA FIJAR LA BARRA --- */
+    width: 100%;     /* Ocupa todo el ancho de la pantalla */
+    position: fixed;  /* La saca del flujo normal y la deja quieta en la pantalla */
+    top: 0;           /* La pega al borde superior */
+    left: 0;          /* La pega al borde izquierdo */
+    z-index: 1000;    /* Asegura que pase por encima de cualquier otro contenido */
 }
 
 .top-bar-logo{
